# FlowMeterReader

./: FlowMeterReader.py  README.md  pyproject.toml  requirements.txt
calibration/: cameraMatrix.array  distanceCoefficients.array  rotation.array  translation.array
scratch/: Calibration.ipynb  processFrameV1.ipynb  processFrameV2.ipynb  processFrameV3.ipynb
scratch/.ipynb_checkpoints/: processFrameV1-checkpoint.ipynb  processFrameV2-checkpoint.ipynb  processFrameV3-checkpoint.ipynb
src/: FlowMeterReader.py
