[project]
name = "flowmeterreader"
version = "0.1.0"
description = "Read vertical flow gauges from an RTSP stream and publish percentages via MQTT"
requires-python = ">=3.8"
authors = [{name = "Your Name", email = "you@example.com"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["opencv", "mqtt", "rtsp", "flowmeter", "qreader"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "opencv-python",
    "matplotlib",
    "qreader",
    "paho-mqtt"
]

[project.scripts]
flowmeterreader = "FlowMeterReader:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
